--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </a>
                     <!-- Project Card 4: Personal Portfolio Site -->
                     <a href="project-detail.html?id=personal-portfolio-site" class="inline-block md:block w-72 md:w-auto mr-4 md:mr-0 card-style overflow-hidden fade-in-slide-up" style="animation-delay: 1.3s;">
-                        <img src="https://placehold.co/600x400/b0b0b0/333?text=Personal+Portfolio" alt="Personal Portfolio Thumbnail" class="w-full h-48 object-cover">
+                        <img src="portfolio2.png" alt="Personal Portfolio Thumbnail" class="w-full h-48 object-cover">
                         <div class="p-4">
                             <h3 class="text-xl font-bold text-charcoal mb-1">Personal Portfolio Site</h3>
                             <p class="text-gray-600 text-sm">A minimalist shrine showcasing my journey.</p>
