--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Project Card 1: Romantic Website -->
                     <a href="project-detail.html?id=romantic-website" class="card-style overflow-hidden group hover:shadow-lg hover:border-black border border-transparent transition-all duration-300 project-card fade-in-slide-up" style="animation-delay: 0.1s;">
-                        <img src="https://placehold.co/600x400/e0e0e0/333?text=Romantic+Website" alt="Romantic Website Thumbnail" class="w-full h-48 object-cover">
+                        <img src="romantic1.png" alt="Romantic Website Thumbnail" class="w-full h-48 object-cover">
                         <div class="p-4">
                             <h3 class="text-xl font-bold text-charcoal mb-1">Romantic Website</h3>
                             <p class="text-gray-600 text-sm mb-4">A heartfelt website crafted just for joy, exploring creative web design.</p>
@@ -63,7 +63,7 @@
                     </a>
                     <!-- Project Card 2: zimSMS -->
                     <a href="project-detail.html?id=zimsms-platform" class="card-style overflow-hidden group hover:shadow-lg hover:border-black border border-transparent transition-all duration-300 project-card fade-in-slide-up" style="animation-delay: 0.2s;">
-                        <img src="https://placehold.co/600x400/d0d0d0/333?text=zimSMS" alt="zimSMS Thumbnail" class="w-full h-48 object-cover">
+                        <img src="zimSmS1.png" alt="zimSMS Thumbnail" class="w-full h-48 object-cover">
                         <div class="p-4">
                             <h3 class="text-xl font-bold text-charcoal mb-1">zimSMS Platform</h3>
                             <p class="text-gray-600 text-sm mb-4">A bold idea to empower small organizations with efficient SMS alerts.</p>
@@ -73,7 +73,7 @@
                     </a>
                     <!-- Project Card 3: Tronix Inventory Management System -->
                     <a href="project-detail.html?id=tronix-inventory-system" class="card-style overflow-hidden group hover:shadow-lg hover:border-black border border-transparent transition-all duration-300 project-card fade-in-slide-up" style="animation-delay: 0.3s;">
-                        <img src="https://placehold.co/600x400/c0c0c0/333?text=Tronix+Inventory" alt="Tronix Inventory Thumbnail" class="w-full h-48 object-cover">
+                        <img src="tronix1.png" alt="Tronix Inventory Thumbnail" class="w-full h-48 object-cover">
                         <div class="p-4">
                             <h3 class="text-xl font-bold text-charcoal mb-1">Tronix Inventory Management System</h3>
                             <p class="text-gray-600 text-sm mb-4">Collaborating on the frontend to build a robust inventory solution.</p>
@@ -83,7 +83,7 @@
                     </a>
                     <!-- Project Card 4: Personal Portfolio Site -->
                     <a href="project-detail.html?id=personal-portfolio-site" class="card-style overflow-hidden group hover:shadow-lg hover:border-black border border-transparent transition-all duration-300 project-card fade-in-slide-up" style="animation-delay: 0.4s;">
-                        <img src="https://placehold.co/600x400/b0b0b0/333?text=Personal+Portfolio" alt="Personal Portfolio Thumbnail" class="w-full h-48 object-cover">
+                        <img src="portfolio2.png" alt="Personal Portfolio Thumbnail" class="w-full h-48 object-cover">
                         <div class="p-4">
                             <h3 class="text-xl font-bold text-charcoal mb-1">Personal Portfolio Site</h3>
                             <p class="text-gray-600 text-sm mb-4">A minimalist shrine showcasing my journey, skills, and stories.</p>
@@ -93,7 +93,7 @@
                     </a>
                     <!-- Project Card 5: Placeholder - can be replaced with future projects -->
                     <div class="card-style overflow-hidden group hover:shadow-lg hover:border-black border border-transparent transition-all duration-300 project-card fade-in-slide-up" style="animation-delay: 0.5s;">
-                        <img src="https://placehold.co/600x400/a0a0a0/333?text=Future+Project" alt="Future Project Thumbnail" class="w-full h-48 object-cover">
+                        <img src="future2.jpg" alt="Future Project Thumbnail" class="w-full h-48 object-cover">
                         <div class="p-4">
                             <h3 class="text-xl font-bold text-charcoal mb-1">Your Next Big Idea</h3>
                             <p class="text-gray-600 text-sm mb-4">Ready to bring innovative concepts to life with clean code.</p>
