--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                             <img src="about2.jpg" alt="Workspace Thumbnail" class="w-16 h-16 rounded-full object-cover cursor-pointer thumbnail" data-src="about2.jpg">
                             <img src="about3.jpg" alt="Keyboard Thumbnail" class="w-16 h-16 rounded-full object-cover cursor-pointer thumbnail" data-src="about3.jpg">
                             <img src="about4.jpg" alt="Sketchbook Thumbnail" class="w-16 h-16 rounded-full object-cover cursor-pointer thumbnail" data-src="about4.jpg">
-                            <img src="about5.jpg" alt="Behind Scenes Thumbnail" class="w-16 h-16 rounded-full object-cover cursor-pointer thumbnail" data-src="about5">
+                            <img src="about5.jpg" alt="Behind Scenes Thumbnail" class="w-16 h-16 rounded-full object-cover cursor-pointer thumbnail" data-src="about5.jpg">
                         </div>
                     </div>
 
